# bts-digital-twin-novel-view-synthesis

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: btc-main.md  btc-round1.md  current-btc-spec.md  gpu-vm.md  recovery-2026-07-20.md
docs/decisions/: 001-round2-artifact-policy.md  002-public-repository.md
experiments/: submission_history.jsonl
infra/gpu/: Dockerfile  check_pip_environment.py  constraints-metrics.txt  docker-compose.yml  requirements-bootstrap.txt  smoke_chair.sh  verify_gpu.sh
manifests/: btc_requirements_2026-07-16.json  btc_requirements_2026-07-20.json  vai_nvs_round2.json
requirements/: constraints-cpu.txt  constraints-perceptual-cpu.txt
src/bts_nvs/: __init__.py  __main__.py  audit.py  camera.py  colmap.py  contest.py  distortion.py  evaluate.py  exceptions.py  feedback.py  holdout.py  ingest.py  ledger.py  nearest_view.py  package.py  path_safety.py  prepare.py  prepare_dataset.py  render.py  render_exact.py  schema.py  score_submission.py  submit.py  train.py  vai.py  validate_submission.py
tests/: test_audit.py  test_camera.py  test_colmap.py  test_contest.py  test_distortion.py  test_evaluate.py  test_feedback.py  test_gpu_dependency_check.py  test_gpu_runtime_contract.py  test_holdout.py  test_ingest.py  test_ledger.py  test_manifest_contract.py  test_nearest_view.py  test_package.py  test_path_safety.py  test_prepare.py  test_prepare_dataset.py  test_render.py  test_render_exact.py  test_score_submission.py  test_submit.py  test_train.py  test_vai.py  test_validate_submission.py
